[package]
name = "glycoflow"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
clap = { version = "4.5.7", features = ["env", "derive"] }
dotenv = "0.15.0"
futures-lite = "2.3.0"
lapin = "2.3.4"
serde = "1.0.203"
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-async-std"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
